# cpp_minimal

./: .gitignore  CMakeLists.txt  MyProject.cpp  MyProject.h  Readme.md
